# llm-eval-harness

./: .env.example  .gitignore  Dockerfile  README.md  implementation_plan.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: eval.yml
api/: main.py  routes.py  schemas.py
data_loader/: hf_dataset.py
evaluator/: ragas_eval.py
rag_pipeline/: chain.py  embeddings.py  vectorstore.py
scripts/: smoke_eval.py
storage/: database.py  models.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_evaluator.py  test_rag_pipeline.py
