[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "1.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "data_loader*", "evaluator*", "rag_pipeline*", "storage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
